# napari-tiledb-bioimg

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
napari_tiledb_bioimg/: __init__.py  _reader.py  _widget.py  _writer.py  napari.yaml
napari_tiledb_bioimg/samples/CMU-1-Small-Region-rgb.ome.tiff.tdb/__group/: __1683209807884_1683209807884_8a51ca23a0154d78b9e461ccb486de7d
napari_tiledb_bioimg/samples/CMU-1-Small-Region-rgb.ome.tiff.tdb/__meta/: __1683209807886_1683209807886_003e45b4beb240339381691b077b3eab
napari_tiledb_bioimg/samples/CMU-1-Small-Region.tdb/__group/: __1683859166939_1683859166939_90e51ed0f4064708b30f942749302bd2_2
napari_tiledb_bioimg/samples/CMU-1-Small-Region.tdb/__meta/: __1683859166940_1683859166940_9b63d4fe1f4e449d982481a181a8aa11  __1737584588212_1737584588212_460b5a6f7e5b3c1cca75b945e4d69e69  __1737584591077_1737584591077_0958da568e28f40ddad0085726015196
src/napari_tiledb_bioimg/: __init__.py  _writer.py  napari.yaml
src/napari_tiledb_bioimg/_tests/: test_reader.py  test_writer.py
tests/: test_reader.py  test_writer.py
tests/rand_data.tdb/__group/: __1737584591070_1737584591070_2b51f8fec39bb483fcafe2b78ca71a27_2
tests/rand_data.tdb/__meta/: __1737584588214_1737584588214_28004d86882d7c7fb1f1b0fce71e0f60  __1737584591072_1737584591072_286dccc010615deb27075cd94063aadc
tests/rand_data.tdb/l_0.tdb/__schema/: __1737584588220_1737584588220_6f206fc3f0d304ea0878c070388ea5c1
tests/rand_uint16.tdb/__group/: __1673958080930_1673958080930_1eeff496db4747b4be7225db004148a9  __1676023032457_1676023032457_c53941923d274102817345575fd6e282  __1676035717255_1676035717255_b3f921fd574c492ea6d8b7b26cc03c86
tests/rand_uint16.tdb/__meta/: __1673958080929_1673958080929_a96637258fbf46aebfb94a271e1dbeca  __1676023032458_1676023032458_3e807075176b4cf298fa511ca2985743
tests/rand_uint16.tdb/l_0.tdb/__meta/: __1673958080898_1673958080898_9782999ed75e41a496fc8614d9456f89  __1676035717225_1676035717225_ac576b66a7e64278b5a68096ba331729
tests/rand_uint16.tdb/l_0.tdb/__schema/: __1673958080887_1673958080887_6a2c92b94cd24964ad605d4da7711a85  __1676023032425_1676023032425_51141a7933f8495291488ae1e3f88d01
tests/rand_uint16.tdb/l_1.tdb/__meta/: __1673958080913_1673958080913_99dd7eb7f95043b7892e09379c7d1986  __1676023032442_1676023032442_bb2df0ae503549e2a7f02cf7508611ac
tests/rand_uint16.tdb/l_1.tdb/__schema/: __1673958080911_1673958080911_db423e5fbcff457290b3bb0151f2e84d  __1676023032441_1676023032441_a29ad43515bb40c3b893a3e7591100f8
tests/rand_uint16.tdb/l_2.tdb/__meta/: __1673958080922_1673958080922_447d6f08ee8547f7acef5e9fd4f41c5a  __1676035717248_1676035717248_f3a253e517054787a89d0173db804fb7
(+45 files in other folders)
