[metadata]
name = napari-tiledb-bioimg
description = Support reading and writing TileDB-Bioimaging image arrays within Napari
url = https://github.com/TileDB-Inc/napari-tiledb-bioimg
long_description = file: README.md
long_description_content_type = text/markdown
author = TileDB, Inc.
author_email = help@tiledb.io
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages =
    napari_tiledb_bioimg
install_requires =
    tiledb-bioimg@git+https://github.com/TileDB-Inc/TileDB-BioImaging@main

python_requires = >=3.8
include_package_data = True

[options.entry_points]
napari.manifest =
    napari-tiledb-bioimg = napari_tiledb_bioimg:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
